ADM-727:[backend]refactor: refactor code to keep consistence